--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.env
+.passwords
+.api*
+*key*
+
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# Python
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
